Delete obsolete replacement after page reindexing